--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(MAZE_BUILDER_CORE_LIB "mazebuildercore")
+set(MAZE_DEBUG_DEF "MAZE_DEBUG")
 
 option(MAZE_BUILDER_DOCS "Build ${PROJECT_NAME} documentation" OFF)
 option(MAZE_BUILDER_TESTS "Build ${PROJECT_NAME} with tests" OFF)
