enable SFML Network config

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -86,7 +86,7 @@ if(MAZE_BUILDER_EXAMPLES)
         set(SFML_REPO_URL "https://github.com/zmertens/SFML.git")
         message(STATUS "Fetching SFML from ${SFML_REPO_URL}")
         set(SFML_BUILD_AUDIO ON)
-        set(SFML_BUILD_NETWORK OFF)
+        set(SFML_BUILD_NETWORK ON)
         set(SFML_BUILD_GRAPHICS OFF)
         set(SFML_BUILD_WINDOW OFF)
         set(SFML_USE_SYSTEM_DEPS OFF)
