--- a/examples/Physics/CMakeLists.txt
+++ b/examples/Physics/CMakeLists.txt
@@ -6,11 +6,11 @@ set(EXE_NAME "mazebuilderphysics")
 set(EXE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/AudioHelper.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Ball.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/CommandQueue.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HttpClient.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Level.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/OrthographicCamera.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Pathfinder.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsGame.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Player.cpp
