add workers to LoadingState

--- a/examples/Physics/CMakeLists.txt
+++ b/examples/Physics/CMakeLists.txt
@@ -10,7 +10,7 @@ set(EXE_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/Entity.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/GameState.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/HttpClient.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/Level.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/LoadingState.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Main.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Pathfinder.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/PhysicsGame.cpp
