--- a/examples/CLI/CMakeLists.txt
+++ b/examples/CLI/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CLI_SOURCES
 if(EMSCRIPTEN)
 
     message(INFO ": Building ${EXE_NAME} for the Web!")
-    
+
     # Set the output file
     add_executable(${EXE_NAME} ${CLI_SOURCES})
     set_target_properties(${EXE_NAME} PROPERTIES SUFFIX ".js" LINK_FLAGS "-lembind")
@@ -20,7 +20,7 @@ if(EMSCRIPTEN)
     target_link_options(${EXE_NAME} PRIVATE --emit-tsd "$<TARGET_FILE_DIR:${EXE_NAME}>/${EXE_NAME}.d.ts")
     target_link_libraries(${EXE_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MAZE_BUILDER_CORE_LIB}_static)
     target_include_directories(${EXE_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/include)
-    target_link_options(${EXE_NAME} PRIVATE "SHELL: -s WASM=1 -s MODULARIZE=1 -s ASYNCIFY")
+    target_link_options(${EXE_NAME} PRIVATE "SHELL: -s WASM=1 -s MODULARIZE=1")
     target_link_options(${EXE_NAME} PRIVATE "$<$<CONFIG:Debug>:SHELL:-s STACK_OVERFLOW_CHECK=2 -s ASSERTIONS=2 -gsource-map>")
     target_link_options(${EXE_NAME} PRIVATE "$<$<CONFIG:Release>:SHELL:-O3>")
 
